# sparql_with_hobbits

./: README.md  pyproject.toml
data/clean_data/: farming_structured.rdf  farming_unstructured.rdf
data/raw_data/: farming.csv  general_store.csv  shops_register.csv
exercises/: 01_generate_simple_RDF_with_TARQL.md
scripts/: convert_farming_csv_structured.rq  convert_farming_csv_unstructured.rq
