[tool.poetry]
name = "sparql_with_hobbits"
version = "0.1.0"
description = ""
authors = ["ErikaDuan <erika.duan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
